--- a/src/app/components/hunts/hunts.component.html
+++ b/src/app/components/hunts/hunts.component.html
@@ -1,4 +1,7 @@
-<gawmas-hunt-filters />
+@if (!isModal()) {
+  <gawmas-hunt-filters />
+}
+
 <gawmas-wx-details #wxDetailsModal />
 
 @if (isLoading$ | async) {
@@ -21,7 +24,7 @@
           <tr class="border-b bg-gray-800 border-gray-500">
             <td class="px-6 py-4 align-top bg-gray-800">
               <div class="flex flex-wrap items-center mb-1">
-                @if (isAdmin) {
+                @if (isAdmin()) {
                   <a routerLink="/admin" [queryParams]="{ h: hunt.id }">
                     <ng-icon name="heroPencilSquare" class="mr-1"></ng-icon>
                   </a>
