--- a/src/app/components/wxDetails/wxDetails.component.html
+++ b/src/app/components/wxDetails/wxDetails.component.html
@@ -3,8 +3,8 @@
 
     <gawmas-modal #wxDetailsModal [targetElement]="wxDetailsTarget">
       <div class="flex items-start justify-between md:rounded-t-2xl my-2 pl-4 pt-4 mb-0 bg-gray-800">
-        <div class="flex items-center pt-2">
-          <h3 class="text-xs md:text-lg font-semibold text-white uppercase border-r border-gray-500 pr-2 mb-0">
+        <div class="flex items-center -ml-6 -mt-4 pt-2 pl-3 pr-4 pb-1.5 border-b rounded-tl-2xl border-gray-600 bg-gradient-to-r from-gawmas-green to-transparent from-20% to-80%">
+          <h3 class="text-sm md:text-lg font-semibold text-white uppercase mb-1 pr-2.5 pt-1">
             Observed Conditions
           </h3>
           <div class="text-xs md:text-base ml-2">
@@ -20,7 +20,7 @@
         </button>
       </div>
       <div class="pt-1 flow-root border-b border-gray-300 bg-gray-800">
-        <div class="text-xs md:text-sm float-left text-gray-400 pl-5 pb-4 -mt-1 italic">
+        <div class="text-xs md:text-sm float-left text-gray-400 pl-5 pb-4 mt-1 italic">
           &#64; {{ location }}, Georgia
         </div>
         <div class="float-right flex items-center text-xs p-2 bg-gray-900 md:rounded-tl-lg border-t border-l border-gray-500">
