--- a/src/scss/components/map.scss
+++ b/src/scss/components/map.scss
@@ -11,8 +11,6 @@
 }
 .info {
   @apply
-    invisible
-    md:visible
     text-xs
     md:text-sm;
   padding: 6px 8px;
@@ -47,4 +45,39 @@
     peer-checked:font-bold
     hover:bg-gray-800 hover:underline
     text-nowrap;
+}
+
+.map-ctrls {
+  margin-top: 0px !important;
+  @apply
+    px-1.5 py-1.5
+    bg-gray-900
+    text-gray-200
+    flex
+    items-center
+    rounded-b-xl;
+
+  button {
+    @apply
+      px-2 py-1 mr-1 my-1 mx-2
+      cursor-pointer
+      flex items-center
+      border-none
+      md:border
+      border-gray-500
+      rounded-md
+      md:rounded-full
+      bg-gray-700;
+    span {
+      @apply
+        hidden
+        md:inline-block
+        ml-1
+        text-gray-300
+    }
+  }
+  button:focus {
+    @apply
+      border;
+  }
 }
